5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1712_2504.log
== TEST (2019-05-13 14:46:02) 
-- CODE:
c = int(input("quantidade  inicial copias:"))
l = int(input("quantidade inicial leucocitos:"))
V = float(input("percentual virus:"))
L = float(input("percentual leucocitos:"))

x = c + ((c * V)/100)
y = l + ((l * L)/100)
w = 1

while(x < y):
	x = x + ((x * V)/100)
	y = y + ((y * L)/100)
	w = w + 1
print(w)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:55:08) 
-- CODE:
v = int(input("quantidade  inicial copias:"))
l = int(input("quantidade inicial leucocitos:"))
V = float(input("percentual virus:"))
L = float(input("percentual leucocitos:"))

xv = v
yl = l
w = 0

while(yl < 2 * xv):
	yl = yl + ((yl * L)/100)
	xv = xv + ((xv * pv)100)
	w = w + 1
print(w)


-- ERROR:
File "XXXX", line 12
    xv = xv + ((xv * pv)100)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:55:15) 
-- CODE:
v = int(input("quantidade  inicial copias:"))
l = int(input("quantidade inicial leucocitos:"))
V = float(input("percentual virus:"))
L = float(input("percentual leucocitos:"))

xv = v
yl = l
w = 0

while(yl < 2 * xv):
	yl = yl + ((yl * L)/100)
	xv = xv + ((xv * pv)/100)
	w = w + 1
print(w)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    xv = xv + ((xv * pv)/100)
NameError: name 'pv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:55:39) 
-- CODE:
v = int(input("quantidade  inicial copias:"))
l = int(input("quantidade inicial leucocitos:"))
V = float(input("percentual virus:"))
L = float(input("percentual leucocitos:"))

xv = v
yl = l
w = 0

while(yl < 2 * xv):
	yl = yl + ((yl * L)/100)
	xv = xv + ((xv * V)/100)
	w = w + 1
print(w)


-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:55:47) 
-- CODE:
v = int(input("quantidade  inicial copias:"))
l = int(input("quantidade inicial leucocitos:"))
V = float(input("percentual virus:"))
L = float(input("percentual leucocitos:"))

xv = v
yl = l
w = 0

while(yl < 2 * xv):
	yl = yl + ((yl * L)/100)
	xv = xv + ((xv * V)/100)
	w = w + 1
print(w)


-- EXECUTION TIME:
0.205474
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:45:24) 
-- CODE:
qv = int(input(":"))
ql = int(input(":"))
pv = float(input(":"))
pl = float(input(":"))

v = qv + ((qv * pv)/100)
l = ql + ((ql * pl)/100)
i = 0

while(l > 2*v):
	v = v + ((v * pv)/100)
	l = l + ((l * pl)/100)
	i = i + 1
print(i)
	



-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:46:21) 
-- CODE:
qv = int(input(":"))
ql = int(input(":"))
pv = float(input(":"))
pl = float(input(":"))

i = 0

while(l > 2*v):
	v = qv + ((qv * pv)/100)
	l = ql + ((ql * pl)/100)
	i = i + 1
print(i)
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(l > 2*v):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:47:04) 
-- CODE:
qv = int(input(":"))
ql = int(input(":"))
pv = float(input(":"))
pl = float(input(":"))

i = 0

while(ql > 2*qv):
	qv = qv + ((qv * pv)/100)
	ql = ql + ((ql * pl)/100)
	i = i + 1
print(i)
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(l > 2*v):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:47:38) 
-- CODE:
qv = int(input(":"))
ql = int(input(":"))
pv = float(input(":"))
pl = float(input(":"))

i = 0

while(ql < 2*qv):
	qv = qv + ((qv * pv)/100)
	ql = ql + ((ql * pl)/100)
	i = i + 1
print(i)
	



-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:47:50) 
-- CODE:
qv = int(input(":"))
ql = int(input(":"))
pv = float(input(":"))
pl = float(input(":"))

i = 0

while(ql < 2*qv):
	qv = qv + ((qv * pv)/100)
	ql = ql + ((ql * pl)/100)
	i = i + 1
print(i)
	



-- EXECUTION TIME:
0.164178
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
